src/objects/Designation__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designation1_Name__c</fullName>
        <formula>DesignationAccount__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Designation1 Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DesignationAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Designations</relationshipLabel>
        <relationshipName>Designations_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Designation_Formula__c</fullName>
        <formula>First_Name__c  &amp;  Employee_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Designation Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designation_count__c</fullName>
        <label>Designation count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Number__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Employee Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Picklist__c</fullName>
        <label>First Picklist</label>
        <picklist>
            <controllingField>Is_Contract__c</controllingField>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Kukatpally</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhapur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hitech City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ameerpet</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>OpportunityM_D__c</fullName>
        <label>OpportunityM_D</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Designations</relationshipLabel>
        <relationshipName>Designations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Second_Picklist__c</fullName>
        <label>Second Picklist</label>
        <picklist>
            <controllingField>First_Picklist__c</controllingField>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AndhraPradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Telagana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tamilnadu</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Salesforce__c</fullName>
        <label>Test Salesforce</label>
        <referenceTo>New_Salesforce__c</referenceTo>
        <relationshipLabel>Designations</relationshipLabel>
        <relationshipName>Designations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Third_Picklist__c</fullName>
        <label>Third :Picklist</label>
        <picklist>
            <controllingField>Second_Picklist__c</controllingField>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>34</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>profile_check__c</fullName>
        <label>profile check</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Designation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Designation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Designations</pluralLabel>
    <recordTypes>
        <fullName>Designation_Type</fullName>
        <active>true</active>
        <label>Designation Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Designation_Type1</fullName>
        <active>true</active>
        <label>Designation Type1</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Email_Required</fullName>
        <active>true</active>
        <errorConditionFormula>if( Email__c  = &apos;&apos;, true,false)</errorConditionFormula>
        <errorMessage>Please provide email address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TestPick_list_validation</fullName>
        <active>true</active>
        <errorConditionFormula>if(ISPICKVAL( Country__c , &apos;&apos;),true,false)</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>please select country</errorMessage>
    </validationRules>
</CustomObject>